Revision history for Mojo-Redis2

0.06
       * Add Mojo::Redis2::Bulk

0.05     Tue Aug 19 14:29:23 2014
       * Add connection event

0.0401   Wed Aug 13 16:41:39 2014
       * Fix "Could not start Redis" test

0.04     Wed Aug 13 16:39:28 2014
       * Fix Not enough arguments for grep at Mojo/Redis2.pm line 444, near "};"
       * Add blpop(), brpop() and brpoplpush() as invalid methods on
         Mojo::Redis2::Transaction

0.03     Wed Aug  6 11:35:43 2014
       * Add watch() to Mojo::Redis2::Transaction
       * Add blpop(), brpop() and brpoplpush() to Mojo::Redis2

0.02     Wed Aug  6 10:20:32 2014
       * Fix the order commands are sent
       * Fix missing dependency: Protocol::Redis
       * Add support for transactions

0.01     Tue Aug  5 13:32:27 2014
       * Started project
       * Add blocking support
       * Add message/pmessage events for pub/sub
       * Add support for basic Redis operations
       * Add error handling
       * Can start Redis server